# LangRover

./: .env.example  .gitignore  AI_HAT_COMPARISON.md  AI_HAT_SETUP.md  ARCHITECTURE.md  DELIVERED.md  DELIVERY_VERIFICATION.md  ESP32_FIRMWARE.md  HARDWARE_COMPLETE.md  HARDWARE_DELIVERY.md  HARDWARE_REFERENCE.md  HARDWARE_SETUP.md  IMPLEMENTATION_PLAN.md  INDEX.md  ISOLATION_COMPLETE.md  MULTI_AGENT_PLAN.md  PROJECT_STATUS.md  RASPBERRY_PI_SETUP.md  README.md  TB6612FNG_SETUP.md  UPDATE_SUMMARY.md  VENV_ISOLATION.md  VISION.md  VISION_COMPLETE.md  VISION_QUICKSTART.md  cleanup-global.ps1  cleanup-global.sh  config.py  esp32_firmware_template.ino  main.py  platformio.ini  pyproject.toml  requirements.txt  run.ps1  run.sh  setup.ps1  setup.sh  test.ps1  test_full_robot.py  test_results.txt
.github/: copilot-instructions.md
.github/prompts/: add-skill.prompt.md  explain-flow.prompt.md
actions/: __init__.py  base.py  cli_actions.py  gpio_actions.py
brain/: __init__.py  agent.py  memory.py  prompts.py  rag.py
diagrams/: ai_pipeline.drawio  architecture.drawio  flow.drawio  week4_rag_agents.drawio
esp32_firmware/: esp32_firmware.ino
esp32_firmware_template/: esp32_firmware_template.ino  secrets.h.example
hardware/: __init__.py  esp32_serial.py  motors.py  pins.py  sensors.py
models/: __init__.py  llm.py
skills/: __init__.py  base.py  builtin.py  registry.py
ui/: app.py  components.py  state.py  worker.py
vision/: __init__.py  camera.py  detector.py  vision.py
world/: __init__.py  simulator.py  state.py
