[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "langrover"
version = "0.1.0"
description = "Hardware-agnostic autonomous robot framework"
requires-python = ">=3.10"
authors = [
    {name = "LangRover Team", email = "dev@langrover.local"}
]
dependencies = [
    "langchain==0.1.14",
    "langchain-openai==0.1.1",
    "langchain-community==0.0.28",
    "pydantic==2.5.3",
    "python-dotenv==1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "black>=23.0",
    "ruff>=0.1",
]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
